--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <meta name="description" content="We asked 100 Viennese people about songs that help them feel good. Listen now."/>
-    <meta property="og:site_name" content="Vienna&#039;s Mental Health"/>
+    <meta property="og:site_name" content="Vienna's Mental Health"/>
     <meta property="og:title" content="Vienna&#039;s Mental Health"/>
     <meta property="og:type" content="website"/>
     <meta property="og:description" content="We asked 100 Viennese people about songs that help them feel good. Listen now."/>
@@ -1533,7 +1533,7 @@
                                 <div>
                                     <div id="image01" class="style1 image" data-position="center">
                                         <span class="frame">
-                                            <img src="assets/images/image01.png?v=bbe3c7fc" alt=""/>
+                                            <img src="https://viennasmentalhealth.carrd.co/assets/images/image01.png?v=bbe3c7fc" alt=""/>
                                         </span>
                                     </div>
                                 </div>
@@ -1569,7 +1569,7 @@
                                 <div>
                                     <div id="image02" class="style1 image" data-position="center">
                                         <span class="frame deferred">
-                                            <img src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHg9IjAiIHk9IjAiIHZpZXdCb3g9IjAgMCAxMDc4IDc5NCIgd2lkdGg9IjEwNzgiIGhlaWdodD0iNzk0IiBwcmVzZXJ2ZUFzcGVjdFJhdGlvPSJub25lIj48cmVjdCBmaWxsPSJ0cmFuc3BhcmVudCIgd2lkdGg9IjEwMCUiIGhlaWdodD0iMTAwJSIvPjwvc3ZnPg%3D%3D" data-src="assets/images/image02.png?v=bbe3c7fc" alt=""/>
+                                            <img src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHg9IjAiIHk9IjAiIHZpZXdCb3g9IjAgMCAxMDc4IDc5NCIgd2lkdGg9IjEwNzgiIGhlaWdodD0iNzk0IiBwcmVzZXJ2ZUFzcGVjdFJhdGlvPSJub25lIj48cmVjdCBmaWxsPSJ0cmFuc3BhcmVudCIgd2lkdGg9IjEwMCUiIGhlaWdodD0iMTAwJSIvPjwvc3ZnPg%3D%3D" data-src="https://viennasmentalhealth.carrd.co/assets/images/image02.png?v=bbe3c7fc" alt=""/>
                                         </span>
                                     </div>
                                 </div>
@@ -1598,13 +1598,6 @@
                         </span>
                     </p>
                 </section>
-                <footer id="footer">
-                    <div id="credits" class="icc-credits">
-                        <span>
-                            <a href="https://carrd.co/build?ref=auto">Made with Carrd</a>
-                        </span>
-                    </div>
-                </footer>
             </div>
         </div>
     </div>
