--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
-    <title>Vienna&#039;s Mental Health</title>
+    <title>Vienna's Mental Health</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <meta name="description" content="We asked 100 Viennese people about songs that help them feel good. Listen now."/>
     <meta property="og:site_name" content="Vienna's Mental Health"/>
-    <meta property="og:title" content="Vienna&#039;s Mental Health"/>
+    <meta property="og:title" content="Vienna's Mental Health"/>
     <meta property="og:type" content="website"/>
     <meta property="og:description" content="We asked 100 Viennese people about songs that help them feel good. Listen now."/>
     <meta property="og:image" content="https://viennasmentalhealth.carrd.co/assets/images/card.jpg?v=bbe3c7fc"/>
     <meta property="og:image:type" content="image/jpeg"/>
     <meta property="og:image:width" content="1280"/>
     <meta property="og:image:height" content="800"/>
-    <meta property="og:url" content="https://viennasmentalhealth.carrd.co"/>
+    <meta property="og:url" content="https://viennasmentalhealth.github.io"/>
     <meta property="twitter:card" content="summary_large_image"/>
-    <link rel="canonical" href="https://viennasmentalhealth.carrd.co"/>
+    <link rel="canonical" href="https://viennasmentalhealth.github.io"/>
     <link href="https://fonts.googleapis.com/css?family=Staatliches:400,400italic" rel="stylesheet" type="text/css"/>
     <style>
     html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
@@ -1533,7 +1533,7 @@
                                 <div>
                                     <div id="image01" class="style1 image" data-position="center">
                                         <span class="frame">
-                                            <img src="https://viennasmentalhealth.carrd.co/assets/images/image01.png?v=bbe3c7fc" alt=""/>
+                                            <img src="photo-1565464315440-8e0d89bc8fd4.jpeg" alt=""/>
                                         </span>
                                     </div>
                                 </div>
@@ -1555,7 +1555,7 @@
                              | 
                             <a href="#de">German</a>
                             <br/>
-                             Vienna&#039;s Mental Health · 2022
+                             Vienna's Mental Health · 2022
                             <br/>
                              Images : 
                             <a href="https://unsplash.com/photos/sKVtstgdZiU">Unsplash</a>
@@ -1569,7 +1569,7 @@
                                 <div>
                                     <div id="image02" class="style1 image" data-position="center">
                                         <span class="frame deferred">
-                                            <img src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHg9IjAiIHk9IjAiIHZpZXdCb3g9IjAgMCAxMDc4IDc5NCIgd2lkdGg9IjEwNzgiIGhlaWdodD0iNzk0IiBwcmVzZXJ2ZUFzcGVjdFJhdGlvPSJub25lIj48cmVjdCBmaWxsPSJ0cmFuc3BhcmVudCIgd2lkdGg9IjEwMCUiIGhlaWdodD0iMTAwJSIvPjwvc3ZnPg%3D%3D" data-src="https://viennasmentalhealth.carrd.co/assets/images/image02.png?v=bbe3c7fc" alt=""/>
+                                            <img src="vienna's mental health transparent.png" alt=""/>
                                         </span>
                                     </div>
                                 </div>
@@ -1591,7 +1591,7 @@
                              | 
                             <a href="#de">Deutsch</a>
                             <br/>
-                             Vienna&#039;s Mental Health · 2022
+                             Vienna's Mental Health · 2022
                             <br/>
                              Bilder : 
                             <a href="https://unsplash.com/photos/sKVtstgdZiU">Unsplash</a>
