--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
       .image.full:last-child .frame {
         border-bottom-left-radius: inherit;
         border-bottom-right-radius: inherit;
-      }
+      } 
 
       .image.style1 .frame {
         max-width: 100%;
@@ -1687,6 +1687,10 @@
         #container01>.wrapper>.inner> :nth-child(2) {
           width: calc(50% + 0.93rem);
         }
+        
+        #image01 
+        { height: 100px; 
+          width: 100px; } 
       }
     </style>
     <noscript>&lt;style&gt;body {overflow: auto !important;}body:after {display: none !important;}#main &gt; .inner {opacity: 1.0 !important;}#main {opacity: 1.0 !important;transform: none !important;transition: none !important;filter: none !important;}#main &gt; .inner &gt; section {opacity: 1.0 !important;transform: none !important;transition: none !important;filter: none !important;}&lt;/style&gt;</noscript>
