--- a/index.html
+++ b/index.html
@@ -1687,10 +1687,7 @@
         #container01>.wrapper>.inner> :nth-child(2) {
           width: calc(50% + 0.93rem);
         }
-        
-        #image01 
-        { height: 100px; 
-          width: 100px; } 
+  
       }
     </style>
     <noscript>&lt;style&gt;body {overflow: auto !important;}body:after {display: none !important;}#main &gt; .inner {opacity: 1.0 !important;}#main {opacity: 1.0 !important;transform: none !important;transition: none !important;filter: none !important;}#main &gt; .inner &gt; section {opacity: 1.0 !important;transform: none !important;transition: none !important;filter: none !important;}&lt;/style&gt;</noscript>
@@ -1735,7 +1732,7 @@
                   <div>
                     <div id="image02" class="style1 image" data-position="center">
                       <span class="frame deferred" style="background-image: url(&quot;data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHg9IjAiIHk9IjAiIHZpZXdCb3g9IjAgMCAxMDc4IDc5NCIgd2lkdGg9IjEwNzgiIGhlaWdodD0iNzk0IiBwcmVzZXJ2ZUFzcGVjdFJhdGlvPSJub25lIj48cmVjdCBmaWxsPSJ0cmFuc3BhcmVudCIgd2lkdGg9IjEwMCUiIGhlaWdodD0iMTAwJSIvPjwvc3ZnPg%3D%3D&quot;); background-size: 100% 100%; background-position: left top; background-repeat: no-repeat no-repeat;">
-                        <img src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHg9IjAiIHk9IjAiIHZpZXdCb3g9IjAgMCAxMDc4IDc5NCIgd2lkdGg9IjEwNzgiIGhlaWdodD0iNzk0IiBwcmVzZXJ2ZUFzcGVjdFJhdGlvPSJub25lIj48cmVjdCBmaWxsPSJ0cmFuc3BhcmVudCIgd2lkdGg9IjEwMCUiIGhlaWdodD0iMTAwJSIvPjwvc3ZnPg%3D%3D" data-src="assets/images/image02.png?v=bbe3c7fc" alt="" style="opacity: 0; transition: opacity 0.375s ease-in-out 0s; transform: scale(1.05625); filter: blur(0.28125rem);">
+                        <img src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHg9IjAiIHk9IjAiIHZpZXdCb3g9IjAgMCAxMDc4IDc5NCIgd2lkdGg9IjEwNzgiIGhlaWdodD0iNzk0IiBwcmVzZXJ2ZUFzcGVjdFJhdGlvPSJub25lIj48cmVjdCBmaWxsPSJ0cmFuc3BhcmVudCIgd2lkdGg9IjEwMCUiIGhlaWdodD0iMTAwJSIvPjwvc3ZnPg%3D%3D" data-src="vienna's mental health transparent.png" alt="" style="opacity: 0; transition: opacity 0.375s ease-in-out 0s; transform: scale(1.05625); filter: blur(0.28125rem);">
                       </span>
                     </div>
                   </div>
