--- a/index.html
+++ b/index.html
@@ -1704,7 +1704,7 @@
                   <div>
                     <div id="image01" class="style1 image" data-position="center">
                       <span class="frame">
-                        <img src="vienna's mental health transparent.png" alt="" style="transform: none; filter: none;">
+                        <img src="viennasmentalhealth.carrd.co/assets/images/image01.png?v=bbe3c7fc" alt="" style="transform: none; filter: none;">
                       </span>
                     </div>
                   </div>
