--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <meta property="og:image:height" content="800">
     <meta property="og:url" content="https://viennasmentalhealth.carrd.co">
     <meta property="twitter:card" content="summary_large_image">
+    <link rel="icon" href="vienna's mental health transparent.png" type="image/x-icon">
     <link rel="canonical" href="https://viennasmentalhealth.github.io">
     <link href="https://fonts.googleapis.com/css?family=Staatliches:400,400italic" rel="stylesheet" type="text/css">
     <style>
@@ -1704,7 +1705,7 @@
                   <div>
                     <div id="image01" class="style1 image" data-position="center">
                       <span class="frame">
-                        <img src="viennasmentalhealth.carrd.co/assets/images/image01.png?v=bbe3c7fc" alt="" style="transform: none; filter: none;">
+                        <img src="vienna's mental health transparent.png" alt="" style="transform: none; filter: none;">
                       </span>
                     </div>
                   </div>
