--- a/index.html
+++ b/index.html
@@ -1688,6 +1688,10 @@
         #container01>.wrapper>.inner> :nth-child(2) {
           width: calc(50% + 0.93rem);
         }
+        
+        #image01
+        { width: 400px;
+          height: 400px; }
   
       }
     </style>
@@ -1711,7 +1715,7 @@
                   </div>
                   <div>
                     <h1 id="text07" class="style2" style="opacity: 1; transform: none;">We asked 100 Viennese people about songs that help them feel better.</h1>
-                    <ul id="buttons02" class="style2 buttons" style="opacity: 1; transform: none;">
+                    <ul id="buttons02" class="style2 buttons" style="opacity: 1; transform: none;">x
                       <li>
                         <a href="https://open.spotify.com/playlist/3oP7lzQxkidL3bMaucRgZj?si=d7ab039200924b09" class="button n01">Listen now.</a>
                       </li>
