--- a/index.html
+++ b/index.html
@@ -1688,6 +1688,10 @@
         #container01>.wrapper>.inner> :nth-child(2) {
           width: calc(50% + 0.93rem);
         }
+        
+        #image01
+        { width: 100%; 
+          height: 100%; }
 
       }
     </style>
