--- a/index.html
+++ b/index.html
@@ -1690,8 +1690,8 @@
         }
         
         #image01
-        { width: 100%; 
-          height: 100%; }
+        { width: 50px; 
+          height: 50px; }
 
       }
     </style>
