--- a/index.html
+++ b/index.html
@@ -1688,10 +1688,6 @@
         #container01>.wrapper>.inner> :nth-child(2) {
           width: calc(50% + 0.93rem);
         }
-        
-        #image01
-        { width: 10px; 
-          height: 10px; }
 
       }
     </style>
@@ -1709,7 +1705,7 @@
                   <div>
                     <div id="image01" class="style1 image" data-position="center">
                       <span class="frame">
-                        <img src="vienna's mental health transparent.png" alt="" style="transform: none; filter: none;">
+                        <img src="vienna's mental health transparent.png" alt="" style="transform: none; filter: none; width:30px; height:auto;">
                       </span>
                     </div>
                   </div>
