--- a/index.html
+++ b/index.html
@@ -1705,7 +1705,7 @@
                   <div>
                     <div id="image01" class="style1 image" data-position="center">
                       <span class="frame">
-                        <img src="vienna's mental health transparent.png" alt="" style="transform: none; filter: none; ">
+                        <img src="vienna's mental health transparent.png" alt="" style="transform: none; filter: none; width:50px; height:100%;">
                       </span>
                     </div>
                   </div>
