--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
          document.getElementById("image02").style.backgroundImage = "url("+images[x] +")"; }    
                                                                                                           
   window.onbeforeunload = confirmExit;
-   function removeHash () 
+   function removeHash() 
     { history.pushState("", document.title, window.location.pathname
-    + window.location.search); }
+    + window.location.search); } }
         
 </script>
     </script>
