--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             </div>
             <p id="text08" class="style5" style="opacity: 1; backface-visibility: hidden; transition: opacity 1s ease 0.125s;"><span class="p">Language: <a href="#home">English</a> | <a href="#de">German</a><br> Vienna's Mental Health · 2022<br> Images : <a href="https://unsplash.com/photos/sKVtstgdZiU">Unsplash</a></span></p>
           </section>
-          <section id="de-section" class="inactive" style="display: none;">
+          <section id="de-section">
             <div id="container01" class="style3 container columns">
               <div class="wrapper">
                 <div class="inner" data-onvisible-trigger="1">
